force-app/main/default/objects/PTO__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs to be Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PTOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PTO Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <columns>Trainer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approval_Queue_PTO</fullName>
        <filterScope>Queue</filterScope>
        <label>Approval Queue</label>
        <queue>Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PTORequests_PTO</fullName>
        <filterScope>Queue</filterScope>
        <label>PTO Requests</label>
        <queue>PTORequests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Approvals_List</fullName>
        <columns>NAME</columns>
        <columns>Trainer__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Pending Approvals List</label>
        <sharedTo>
            <role>CTO</role>
            <role>Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PTO-{0000}</displayFormat>
        <label>PTO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PTO Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EndDate_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>PTO must end on the same day or later than the start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDate_validation</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>PTO can only be requested for today or later</errorMessage>
    </validationRules>
</CustomObject>