force-app/main/default/objects/PTO__c/validationRules/EndDate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>PTO must end on the same day or later than the start date</errorMessage>
</ValidationRule>