force-app/main/default/objects/PTO__c/validationRules/StartDate_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_validation</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>StartDate__c</errorDisplayField>
    <errorMessage>PTO can only be requested for today or later</errorMessage>
</ValidationRule>