force-app/main/default/objects/PTO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <columns>Trainer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>