force-app/main/default/objects/PTO__c/listViews/Approval_Queue_PTO.listView-meta.xml
<ListView>
    <fullName>Approval_Queue_PTO</fullName>
    <filterScope>Queue</filterScope>
    <label>Approval Queue</label>
    <queue>Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>