force-app/main/default/objects/PTO__c/listViews/Pending_Approvals_List.listView-meta.xml
<ListView>
    <fullName>Pending_Approvals_List</fullName>
    <columns>NAME</columns>
    <columns>Trainer__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Pending Approvals List</label>
    <sharedTo>
        <role>CTO</role>
        <role>Manager</role>
    </sharedTo>
</ListView>