force-app/main/default/objects/PTO__c/listViews/PTORequests_PTO.listView-meta.xml
<ListView>
    <fullName>PTORequests_PTO</fullName>
    <filterScope>Queue</filterScope>
    <label>PTO Requests</label>
    <queue>PTORequests</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>